align header css fix

--- a/app/styles/offcanvas.scss
+++ b/app/styles/offcanvas.scss
@@ -365,6 +365,7 @@ textarea {
     }
     header h1 {
         margin: 0;
+        margin-left: 2.5px;
     }
     #header-nav {
         color: #57626b;
